# dspy-experiments

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
experiments/: basic_qa.py  image_to_text.py
notebooks/: getting_started.ipynb
scripts/: check_code.sh  format_code.sh
