[tool.poetry]
name = "dspy-experiments"
version = "0.1.0"
description = "Experiments with DSPy framework"
authors = ["Dominik Linsmayer <50681661+DoMaLi94@users.noreply.github.com>"]
maintainers = ["Dominik Linsmayer <50681661+DoMaLi94@users.noreply.github.com>"]
readme = "README.md"
homepage = "https://github.com/DoMaLi94/dspy-experiments"
repository = "https://github.com/DoMaLi94/dspy-experiments"
documentation = "https://github.com/DoMaLi94/dspy-experiments#readme"
keywords = ["dspy", "llm", "machine-learning", "ai", "experiments"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
dspy-ai = "^2.6.27"
python-dotenv = "^1.1.1"
ollama = "^0.4.5"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"
flake8 = "^7.1.1"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["dspy.*", "ollama.*"]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
